# Trayracer2

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  README.md  conanfile.txt  imgui.ini
lib/: CMakeLists.txt
lib/MetricsGui/: CMakeLists.txt
lib/glad/: CMakeLists.txt
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
lib/imgui/: CMakeLists.txt
src/: CMakeLists.txt  application.cpp  application.h  core.h  log.cpp  main.cpp  window.h
src/core/: application.cpp  application.h  core.h  log.cpp  log.h  main.cpp  window.h
src/events/: application_events.h  dispatcher.h  event.h  events.h  input_events.h
src/gui/: dockspace.cpp  dockspace.h  gui.cpp  gui.h  menu_bar.cpp  menu_bar.h  metrics_ui.cpp  metrics_ui.h  object_properties.cpp  object_properties.h  scene_overview.cpp  scene_overview.h  scene_ui.cpp  scene_ui.h  settings_ui.cpp  settings_ui.h  viewport.cpp  viewport.h
src/imgui/: imgui_renderer.cpp  imgui_renderer.h
src/input/: buttoncodes.h  input.h  keycodes.h
src/platform/linux/: linux_input.cpp  linux_input.h  linux_window.cpp  linux_window.h
src/platform/opengl/: opengl_context.cpp  opengl_context.h  opengl_renderer_api.cpp  opengl_renderer_api.h  opengl_texture2d.cpp  opengl_texture2d.h
src/rendering/: graphics_context.h  render_command.cpp  render_command.h  renderer_api.cpp  renderer_api.h  texture2d.cpp  texture2d.h
src/tracing/: intersection.h  material.cpp  material.h  ray.h  raytracer.cpp  raytracer.h  scene.cpp  scene.h
src/tracing/objects/: scene_object.h  sphere.cpp  sphere.h
